# specbox-engine

./: .dockerignore  .env.example  .gga  .gitignore  CHANGELOG.md  CLAUDE.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Dockerfile  ENGINE_VERSION.yaml  LICENSE  README.md  SECURITY.md  docker-compose.yml  install.sh  pyproject.toml  specbox-state.json
.claude/: settings.json
.github/: CODEOWNERS  pull_request_template.md
.quality/: README.md  read_tracker.jsonl
agent-teams/: README.md
agents/: acceptance-tester.md  acceptance-validator.md  ag-10-quality-auditor.md  appscript-specialist.md  db-specialist.md  design-specialist.md  developer-tester.md  feature-generator.md  n8n-specialist.md  orchestrator.md  qa-validation.md  quality-auditor.md  uiux-designer.md
commands/: adapt-ui.md  audit.md  feedback.md  implement.md  optimize-agents.md  plan.md  prd.md  quality-gate.md
docs/: agent-teams.md  architecture.md  commands.md  getting-started.md
rules/: GLOBAL_RULES.md
server/: __init__.py  __main__.py  auth_gateway.py  benchmark_generator.py  board_helpers.py  dashboard_api.py  delta_generator.py  github_sync.py  hint_manager.py  models.py  pdf_generator.py  prd_parser.py  prd_writer.py  server.py  skill_registry.py  spec_backend.py  stitch_client.py  trello_client.py
templates/: CLAUDE.md.template  quality-baseline.json.template  settings.json.template  skill-manifest.yaml.template  team-config.json.template
tests/: conftest.py  test_ac_mutation_backends.py  test_acceptance_automation.py  test_acceptance_check.py  test_audit.py  test_auth_gateway.py  test_auth_gateway_v2.py  test_benchmark.py  test_board_helpers.py  test_board_helpers_async.py  test_board_operations.py  test_coverage_edges.py  test_delta_generator.py  test_github_sync.py  test_heartbeat.py  test_heartbeat_stats.py  test_hint_manager.py  test_import_spec_idempotent.py  test_live_state.py  test_main.py  test_migration.py  test_milestone_management.py  test_models.py  (+21 more)
(+286 files in other folders)
